RESTCallout/src/objects/Integration_Output__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Conversion__c</fullName>
        <label>Field Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integration_Conversion_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header Variable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Definition__c</fullName>
        <label>Integration Definition</label>
        <referenceTo>Integration_Definition__c</referenceTo>
        <relationshipLabel>Integration Outputs</relationshipLabel>
        <relationshipName>Integration_Outputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Output</label>
    <nameField>
        <label>Integration Output Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>